# tsclean

./: .gitignore  Makefile  README.md  pyproject.toml
src/tsclean/: __init__.py  cleants.py  comskip.py  config.py  ffmpeg.py  filename.py  mp3.py  radio.py  shell.py  strings.py  time.py  tvh.py
tests/: test_config.py  test_ffmpeg.py  test_filename.py  test_radio.py  test_shell.py  test_strings.py  test_time.py  test_tsclean.py  test_tvh.py
tests/data/: radio.ts
