[tool.poetry]
name = "tsclean"
version = "0.2.16"
description = "Clean broadcast transport stream files recorded from Freeview (UK DVB)."
authors = ["ccdale <chris.allison@hivehome.com>"]
readme = "README.md"
packages = [{include = "tsclean", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[tool.poetry.scripts]
tsclean = "tsclean.cleants:doClean"
tsaudio = "tsclean.cleants:doAudio"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
