[tool.poetry]
name = "tsclean"
version = "0.6.0"
description = "Clean broadcast transport stream files recorded from Freeview (UK DVB)."
authors = ["ccdale <chris.allison@hivehome.com>"]
readme = "README.md"
packages = [{include = "tsclean", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
mutagen = "^1.46.0"
fabric = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[tool.poetry.scripts]
tsclean = "tsclean.cleants:doClean"
tsaudio = "tsclean.cleants:doAudio"
tsmp3 = "tsclean.cleants:doMp3"
tsradio = "tsclean.cleants:tsRadio"

# [tool.pytest.ini_options]
# filterwarnings = [
#     "ignore::DeprecationWarning"
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
